# aml-docs

./: .gitignore  .prettierrc  .yarnrc.yml  AGENTS.md  CLAUDE.md  doom.config.yml  llms.txt  llmstxt-config.yaml  llmstxt-state.json  package.json  sites.yaml  tsconfig.json
.builds/: doc-build-config.yaml  doc-build.yaml  doc-pr-build.yaml
.cspell/: compound.txt  terms.txt
.tekton/: doc-build.yaml  doc-pr-build.yaml
docs/en/: glossary.mdx  installation.mdx  permissions.mdx  ragas.mdx  troubleshoot.mdx  uninstallation.mdx  upgrade.mdx
docs/en/training_guides/assets/build-train-image/: pyproject.toml
docs/public/: calibration-compressor.ipynb  data-free-compressor.ipynb  global-install.sh  qwen25_pretrain_verify.ipynb  qwen35_modelslim_quant_verify.ipynb  qwen3_0.6b_finetune_verify.ipynb  ragas-rag-eval.ipynb  sync-from-dockerhub.sh
docs/ru/: glossary.mdx  permissions.mdx
docs/zh/: glossary.mdx  permissions.mdx  troubleshoot.mdx  uninstallation.mdx  upgrade.mdx
e2e/: .gitignore  TODO.md  lib.sh  mlflow-agent-tracing.py  mlflow-agent-tracing.sh  mlflow-pipeline-smoke.sh  mlflow-user-identity-smoke.sh  run_all.sh
e2e/assets/: build-pipeline-ir.sh  mlflow-pipeline.yaml  mlflow_pipeline_step.py
e2e/cases/: c11_qwen3_06b_mindspore.sh  c12_kueue_preemption.sh  c13_feast_firstcycle.sh  c13_traininghub_qlora.sh  c14_traininghub_cpt.sh  c15_dra_gpu_slice.sh  c15_qlora_npu.sh  c16_cpt_npu.sh  c1_smoke_gpu.sh  c2_kubeflow_trainer_mnist.sh  c3_traininghub_sft.sh  c4_traininghub_osft.sh  c5_trainer_v2_llamafactory.sh  c6_volcanojob_llamafactory.sh  (+3 more)
theme/: index.ts
(+499 files in other folders)
