[project]
name = "training-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "llamafactory[metrics,awq,modelscope]",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers<=4.51.1",
    "tokenizers>=0.21.1",
    "sqlalchemy~=2.0.30",
    "pymysql~=1.1.1",
    "loguru~=0.7.2",
    "mysqlclient~=2.2.7",
    "deepspeed~=0.16.9",
    "mlflow>=3.1",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.sources]
llamafactory = { git = "https://github.com/hiyouga/LLaMA-Factory.git", tag = "v0.9.4" }
